Mejoras en el frontend y configuración para Render - Jhoel Suarez UDLA 2025

--- a/MiniCoreComisiones/Dockerfile
+++ b/MiniCoreComisiones/Dockerfile
@@ -15,5 +15,8 @@ FROM mcr.microsoft.com/dotnet/aspnet:8.0
 WORKDIR /app
 COPY --from=build /app/out .
 
-EXPOSE 80
+# Exponer puerto 8080 (Render usa variable PORT)
+EXPOSE 8080
+ENV ASPNETCORE_URLS=http://+:8080
+
 ENTRYPOINT ["dotnet", "MiniCoreComisiones.dll"]
